--- a/Areas/Staff/Views/StaffHome/Index.cshtml
+++ b/Areas/Staff/Views/StaffHome/Index.cshtml
@@ -11,7 +11,7 @@
 @section UserName {
     <div class="user_name  row1 " style="font-weight: 600; font-size: small;">
         @*<img class="icon" src="~/Areas/User/assets/images/logo/logomini.png" alt="">*@
-        @*@currentUser.full_name*@
+        @currentUser.full_name
     </div>
     @*<div class="row1" style="font-size: small; font-weight: 500;">
         <img class="icon" src="~/Areas/User/assets/images/logo/icon-gift.190935e4.png" alt="">
