--- a/Areas/Admin/Views/Schedule/Index.cshtml
+++ b/Areas/Admin/Views/Schedule/Index.cshtml
@@ -21,11 +21,10 @@
                         <img src="~/assets/images/logo/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-1 buyticket-area">
-                    <a href="" class="buyticket-btn btn">
-                    </a>
+                <div class="col-md-2 buyticket-area">
+                   
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-5">
                     <ul class="list-gr-1 list-group list-group-horizontal">
                         <li class="list-group-item movie-area">
                             <a href="/Admin/AdminHome">
@@ -72,9 +71,7 @@
                     </ul>
                 </div>
                 <div class="col-md-1">
-                    <button class="search-btn btn">
-                        <i class="search-icon ti-search"></i>
-                    </button>
+                  
                 </div>
                 <div class="login-area col-md-2">
                     <div class="row">
@@ -111,13 +108,13 @@
     <div class="line-default"></div>
     <div class="container wrapper row">
         <div class="col-md-2">
-            <div class="list-group" id="list-tab" role="tablist">
-                <a class="list-group-item list-group-item-action active" id="list-profile-list" data-bs-toggle="list" href="#movie-list" role="tab" aria-controls="movie-list">Tất cả</a>
-                <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#movie-list" role="tab" aria-controls="movie-list">Rạp 1</a>
-                <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#movie-list" role="tab" aria-controls="movie-list">Rạp 2</a>
-                <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#movie-list" role="tab" aria-controls="movie-list">Rạp 3</a>
-                <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#movie-list" role="tab" aria-controls="movie-list">Rạp 4</a>
-                <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#movie-list" role="tab" aria-controls="movie-list">Rạp 5</a>
+            <div class="list-group room-list" id="list-tab" role="tablist">
+                <a id="room-0" class="list-group-item list-group-item-action room-item active" data-bs-toggle="list" href="#movie-list" role="tab" aria-controls="movie-list" data-roomid="0">Tất cả</a>
+                <a id="room-1" class="list-group-item list-group-item-action room-item" data-bs-toggle="list" href="#movie-list" role="tab" aria-controls="movie-list" data-roomid="1">Rạp 1</a>
+                <a id="room-2" class="list-group-item list-group-item-action room-item" data-bs-toggle="list" href="#movie-list" role="tab" aria-controls="movie-list" data-roomid="2">Rạp 2</a>
+                <a id="room-3" class="list-group-item list-group-item-action room-item" data-bs-toggle="list" href="#movie-list" role="tab" aria-controls="movie-list" data-roomid="3">Rạp 3</a>
+                <a id="room-4" class="list-group-item list-group-item-action room-item" data-bs-toggle="list" href="#movie-list" role="tab" aria-controls="movie-list" data-roomid="4">Rạp 4</a>
+                <a id="room-5" class="list-group-item list-group-item-action room-item" data-bs-toggle="list" href="#movie-list" role="tab" aria-controls="movie-list" data-roomid="5">Rạp 5</a>
             </div>
         </div>
         <div class="wrapper-content col-md-10">
@@ -125,9 +122,29 @@
                 <div class="search-content-item">
                     <input id="myID" placeholder="Nhập mã">
                 </div>
-                <button class="report-btn">
-                    Tìm kiếm
+            
+                <button type="button" class="report-btn" data-bs-toggle="modal" data-bs-target="#scheduleModal">
+                    Thêm suất chiếu
                 </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="scheduleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Thêm Suất Chiếu</h1>
+                                @*<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>*@
+                            </div>
+                            <div class="modal-body">
+                                
+                            </div>
+                            @*<div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>*@
+                        </div>
+                    </div>
+                </div>
                 @*<input id="selectedDate" name="selectedTime" type="date" />*@
                 <div class="datetime-picker position-relative">
                     <i class="far fa-calendar-alt position-absolute"></i>
@@ -135,7 +152,7 @@
                 </div>
             </form>
             <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane fade" id="movie-list" role="tabpanel" aria-labelledby="list-profile-list">
+                <div class="tab-pane fade active show" id="movie-list" role="tabpanel" @*aria-labelledby="list-profile-list"*@>
                     <table class="table" id="resultTable">
                         <thead>
                             <tr>
@@ -187,7 +204,7 @@
                     $.each(movieList, function (index, movie) {
                         var showTimesHtml = '';
                         $.each(movie.ShowTimes, function (i, showTime) {
-                            showTimesHtml += '<span class="btn">' + showTime + '</span> ';
+                            showTimesHtml += '<span style="border: 1px solid #f26b36 !important;" class="btn mx-1">' + showTime + '</span> ';
                         });
 
                         var movieHtml = '<tr>';
@@ -207,5 +224,47 @@
                 }
             });
         });
+
+        
+    })
+
+    $(document).on('click', '.room-item', function (e) { // Changed to a regular function
+        var roomId = parseInt($(this).attr('id').substring(5)); // 'this' now correctly refers to the clicked element
+        console.log("Room " + roomId)
+        var selectedDate = $('#selectedDate').val();
+        $.ajax({
+            url: '/Admin/Schedule/MovieByRoom',
+            type: 'POST',
+            data: {
+                roomId: roomId,
+                displayDate: selectedDate
+            },
+            success: function (response) {
+                var resultTable = $('#resultTable tbody');
+                resultTable.empty();
+                var movieList = response.movieList
+                console.log(movieList)
+
+                $.each(movieList, function (index, movie) {
+                    var showTimesHtml = '';
+                    $.each(movie.ShowTimes, function (i, showTime) {
+                        showTimesHtml += '<span style="border: 1px solid #f26b36 !important;" class="btn mx-1">' + showTime + '</span> ';
+                    });
+
+                    var movieHtml = '<tr>';
+                    movieHtml += '<th scope="row"><img style="border-radius: 5px;width: 50px" src="' + movie.MovieImage + '" /></th>';
+                    movieHtml += '<td>' + movie.MovieTitle + '</td>';
+                    movieHtml += '<td>' + movie.Duration + ' phút</td>';
+                    movieHtml += '<td>' + showTimesHtml + '</td>';
+                    movieHtml += '<td><a style="color: #F26B38;" href="#"><i class="fa-regular fa-pen-to-square"></i></a></td>';
+                    movieHtml += '</tr>';
+
+                    resultTable.append(movieHtml);
+                });
+            },
+            error: function (err) {
+                console.log(err)
+            }
+        })
     })
 </script>
