--- a/Areas/Staff/Views/Shared/_StaffLayout.cshtml
+++ b/Areas/Staff/Views/Shared/_StaffLayout.cshtml
@@ -60,13 +60,13 @@
                                     <img src="~/assets/images/subimg/account.png" alt="" class="img-fluid account-img">
                                     <ul class="list-group account-list">
                                         <li class="list-group-item">
-                                            <a href="/User/UserHome/UserProfile">
+                                            <a href="/Staff/StaffHome/StaffProfile">
                                                 <i class="fa-solid fa-id-badge account-icon"></i>
                                                 Tài Khoản
                                             </a>
                                         </li>
                                         <li class="list-group-item">
-                                            <a href="/Home/SignOut" class="js-logout">
+                                            <a href="/Staff/StaffHome/SignOut" class="js-logout">
                                                 <i class="fa-solid fa-arrow-right-from-bracket account-icon"></i>
                                                 Đăng Xuất
                                             </a>
@@ -75,8 +75,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-auto">
-                            @RenderSection("UserName", required: false);
+                        <div class="col-auto" style="align-items: center; display: flex;">
+                            @RenderSection("UserName", required: false)
                         </div>
                     </div>
                 </div>
@@ -140,10 +140,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/html5-qrcode"></script>
     <script>
-        function getDayOfWeek(dateitem) {
-            var days = ['Chủ Nhật', 'Thứ Hai', 'Thứ Ba', 'Thứ Tư', 'Thứ Năm', 'Thứ Sáu', 'Thứ Bảy'];
-            return days[dateitem.getDay()];
-        }
+   
         var html5QrcodeScanner;
         var Id = ""
 
@@ -214,17 +211,16 @@
         }
 
         
-
-        // Hàm được gọi khi modal được mở
+        // event khi mở modal
         $('#qr-scan').on('shown.bs.modal', function () {
             initializeQrScanner();
         });
 
-        // Hàm được gọi khi modal bị đóng
+        //event khi đóng modal
         $('#qr-scan').on('hidden.bs.modal', function () {
             if (html5QrcodeScanner) {
                 html5QrcodeScanner.clear();
-                document.getElementById('qr-reader').innerHTML = ''; // Xóa nội dung bên trong để tránh lỗi
+                document.getElementById('qr-reader').innerHTML = ''; 
             }
         });
     </script>
