--- a/Areas/Admin/Views/Schedule/Index.cshtml
+++ b/Areas/Admin/Views/Schedule/Index.cshtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Product Page - Admin HTML Template</title>
+    <title>Suất Chiếu</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
     <link rel="stylesheet" href="~/Areas/Admin/assets/css/schedule.css?v=1" />
@@ -129,26 +129,99 @@
 
                 <!-- Modal -->
                 <div class="modal fade" id="scheduleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
+                    <div class="modal-dialog" style="float: left">
+                        <div class="modal-content" style=" margin-left: 19rem; height: 28.5rem!important; width: 50rem;">
                             <div class="modal-header">
                                 <h1 class="modal-title fs-5" id="exampleModalLabel">Thêm Suất Chiếu</h1>
                                 @*<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>*@
                             </div>
-                            <div class="modal-body">
-                                
+                            <div class="modal-body" style=" padding-top: 0; padding-bottom: 0;">
+                                <div class="add-schedule row">
+                                    <div class="col-md-7">
+                                        <div class="row movie-name my-3">
+                                            <label style="color: rgb(119 119 119 / 1); font-weight: 600; font-size: 13px;">Chọn phim</label>
+                                            <select id="movieSelected" style=" margin-left: 12px; margin-top: 4px;" class="form-select">
+                                                @foreach (var movie in ViewBag.MovieList)
+                                                {
+                                                    <option value="@movie.id">@movie.title</option>
+                                                }
+                                            </select>
+                                        </div>
+                                        <div class="row movie-date my-3">
+                                            <div class="col-md-6">
+                                                <label style="color: rgb(119 119 119 / 1); font-weight: 600; font-size: 13px;">Ngày chiếu</label>
+                                                <div class="datetime-picker position-relative">
+                                                    <i class="far fa-calendar-alt position-absolute"></i>
+                                                    <input id="movieDate" name="selectedTime" type="date" style="border: 1px solid #ccc; border-radius: 5px; padding-left: 2rem; height: 38px;" placeholder="Chọn ngày" />
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label style="color: rgb(119 119 119 / 1); font-weight: 600; font-size: 13px;">Chọn rạp</label>
+                                                <select id="roomSelected" @*style=" margin-left: 12px; margin-top: 4px;"*@ class="form-select">
+                                                    @*<option selected></option>*@
+                                                    @foreach (var room in ViewBag.RoomList)
+                                                    {
+                                                        <option value="@room.id">@room.room_name</option>
+                                                    }
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="row movie-schedule my-3">
+                                            <label style="color: rgb(119 119 119 / 1); font-weight: 600; font-size: 13px;">Suất chiếu</label>
+                                            <div id="schedule-valid" style="margin: 3px 11px; border: 1px solid #ccc; border-radius: 6px; overflow: auto; text-align: center; height: 11rem;">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-5 px-4 py-3">
+                                        <div class="movie-item-selected bg-white">
+                                            <div class="row movie-selected-detail">
+                                                <div class="col-md-4 movie-img-wrapper">
+                                                    <img class="movie-selected-img" src="~/assets/images/movie/unname-movie.svg" alt="">
+                                                </div>
+                                                <div class="col-md-7 mx-2 movie-name-wrapper">
+                                                    <div class="row mx-1">
+                                                        <span class="movie-selected-name"></span>
+                                                        <span class="movie-selected-date"></span>
+                                                        <span class="movie-selected-room"></span>
+                                                    </div>
+                                                </div>
+                                                @*<div class="ticket-selected-detail">
+                                                    <div class="row">
+                                                        <span>Ngày 24/06/2004</span>
+                                                    </div>
+                                                    <div class="row d-inline-block">
+                                                        <span>RẠP 1</span>
+                                                        <span></span>
+                                                    </div>
+                                                </div>*@
+                                            </div>
+                                            <div class="row dashed-line"></div>
+                                            <div class="row align-items-center total-money">
+                                                <div class="col-md">
+                                                    <span>Đã chọn</span>
+                                                </div>
+                                                <div class="col-auto justify-content-end money-item">
+                                                    <span id="sum-money">0</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row text-center align-items-center ticket-next-btn">
+                                            <div class="continue-item justify-content-center">
+                                                <button class="my-4 btn continueBtn un-click">
+                                                    <span>Thêm Suất</span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            @*<div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
-                            </div>*@
                         </div>
                     </div>
                 </div>
                 @*<input id="selectedDate" name="selectedTime" type="date" />*@
-                <div class="datetime-picker position-relative">
+                <div class="position-relative">
                     <i class="far fa-calendar-alt position-absolute"></i>
-                    <input id="selectedDate" name="selectedTime" type="date" style="padding-left: 2rem; height: 3rem; " placeholder="Chọn ngày" />
+                    <input id="selectedDate" min="2024-06-02" max="2024-06-30" name="selectedTime" type="date" style="padding-left: 2rem; height: 3rem; " placeholder="Chọn ngày" />
                 </div>
             </form>
             <div class="tab-content" id="nav-tabContent">
@@ -178,6 +251,9 @@
         flatpickr("#selectedDate", {
             dateFormat: "Y-m-d",
         });
+        flatpickr("#movieDate", {
+            dateFormat: "Y-m-d",
+        });
     </script>
 
 </body>
@@ -185,10 +261,13 @@
 
 <script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
+    var fp = flatpickr("#movieDate", {
+        dateFormat: "Y-m-d",
+    });
+
     $(document).ready(function () {
         $('#selectedDate').change(function () {
             var selectedDate = $('#selectedDate').val();
-            console.log("Hello" + selectedDate)
 
             $.ajax({
                 url: '/Admin/Schedule/GetSchedule',
@@ -267,4 +346,99 @@
             }
         })
     })
+    $(document).ready(function () {
+        $("#movieSelected").change(function () {
+            var selectedMovie = $(this).val();
+            
+            console.log("Movie" + selectedMovie)
+            $.ajax({
+                url: '/Admin/Schedule/MovieSelected',
+                type: 'POST',
+                data: { movieId: selectedMovie },
+                success: function (response) {
+                    if (response.success) {
+                        $('.movie-selected-name').text(response.displayDate.movieTitle)
+                        $('.movie-selected-img').attr({
+                            'src': response.displayDate.movieImage
+                        })
+                        fp.set("minDate", response.displayDate.dateFrom);
+                        fp.set("maxDate", response.displayDate.dateEnd);
+                    }
+                },
+                error: function (error) {
+                    console.log(error);
+                }
+            });
+        });
+    });
+
+    $(document).ready(function () {
+        $('#movieDate').change(function () {
+            var selectedDate = $('#movieDate').val();
+            console.log("Date " + selectedDate)
+            $('.movie-selected-date').text(selectedDate)
+        });
+
+
+    })
+
+    $(document).ready(function () {
+        $('#roomSelected').change(function () {
+            var roomName = $('#roomSelected option:selected').text()
+            $('.movie-selected-room').text(roomName)
+            var selectedDate = $('#movieDate').val();
+            var selectRoom = $('#roomSelected').val();
+            var selectedMovie = $('#movieSelected').val();
+            $.ajax({
+                url: '/Admin/Schedule/GetScheduleValid',
+                type: 'POST',
+                data: {
+                    movieId: selectedMovie,
+                    displayDate: selectedDate,
+                    roomId: selectRoom
+                },
+                success: function (response) {
+                    var scheduleValid = $('#schedule-valid');
+                    scheduleValid.empty();
+                    var schedule = response.allschedule
+
+                    $.each(schedule, function (index, item) {
+                        var showTimesHtml = '';
+                        showTimesHtml += '<span id="' + item.ScheduleId + '" class="btn my-2 mx-1" style="border: 1px solid #f26b36 !important; width: 80px;">' + item.Schedule + '</span>';
+                        scheduleValid.append(showTimesHtml);
+                    });
+                },
+                error: function (error) {
+                    // Xử lý lỗi nếu có
+                    console.log(error);
+                }
+            });
+        });
+    })
+
+    $(document).on('click', '.movie-schedule span', function () {
+        if ($(this).hasClass('selected')) 
+            $(this).removeClass('selected')
+        else {
+            $(this).addClass('selected')
+        }
+        var totalSchedule = $('.movie-schedule .selected').length;
+        $('#sum-money').text(totalSchedule + " suất")
+        updateContinueButtonState()
+    })
+
+    function updateContinueButtonState() {
+        var totalSchedule = $('.movie-schedule .selected').length;
+        console.log("Schedule " + totalSchedule)
+        if (totalSchedule === 0) {
+            $('.continueBtn').addClass('un-click');
+        } else {
+            $('.continueBtn').removeClass('un-click');
+        }
+    }
+
+    $(document).ready(function () {
+        updateContinueButtonState();
+    });
+
 </script>
