--- a/Admin/css/movie.css
+++ b/Admin/css/movie.css
@@ -235,7 +235,7 @@ html {
   
   .getdate{
     display: flex;
-    justify-content: center;
+    padding-left: 2rem;
     align-items: center;
     margin-top: 3rem;
     margin-bottom: 3rem;
