--- a/Areas/User/assets/css/bookticket.css
+++ b/Areas/User/assets/css/bookticket.css
@@ -760,12 +760,20 @@
 }
 
     .room-list .seat-item {
-        padding: 0 8px;
+        border-radius: 4px;
+        border: 2px solid #ccc;
+        width: 34px;
+        height: 34px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
     }
 
         .room-list .seat-item:hover {
             background-color: #f58020;
             border: none;
+            color: #fff;
         }
 
 .seat-text {
@@ -783,12 +791,14 @@
     background-color: #d0d0d0;
     padding: 10px 10px;
     border: none;
+    color: #fff;
 }
 
 .seat-selecting {
     padding: 10px 10px;
     background-color: #f58020;
     border: none;
+    color: #fff;
 }
 
 .seat-status {
@@ -797,9 +807,9 @@
 }
 
 .disabled-hover:hover {
-    pointer-events: none !important;
-    background-color: #d0d0d0 !important;
-    cursor: none !important;
+    color: inherit !important;
+    background-color: inherit !important;
+    cursor: default !important;
 }
 
 
@@ -808,7 +818,7 @@
 }
 
 .seat-sold:hover {
-    background-color: #d0d0d0;
+    background-color: #d0d0d0 !important;
 }
 
 .seat-status span {
@@ -819,7 +829,7 @@
     color: #fff;
     font-weight: 500;
     background-color: #f58020;
-    border: none;
+    border: none !important;
 }
 
 .seat-chosen {
